--- a/OsmAnd/res/layout/transport_stop_route_item_with_icon.xml
+++ b/OsmAnd/res/layout/transport_stop_route_item_with_icon.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:osmand="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
+	android:layout_width="wrap_content"
 	android:layout_height="28dp"
 	android:background="@drawable/transport_stop_route_bg"
 	android:orientation="horizontal">
@@ -19,9 +19,9 @@
 		android:id="@+id/transport_stop_route_text"
 		android:layout_width="wrap_content"
 		android:layout_height="28dp"
+		android:layout_marginEnd="8dp"
+		android:layout_marginRight="8dp"
 		android:gravity="center"
-		android:paddingEnd="8dp"
-		android:paddingRight="8dp"
 		android:textAllCaps="true"
 		android:textColor="@color/color_white"
 		android:textSize="@dimen/default_sub_text_size_small"
