--- a/OsmAnd/res/values-de/phrases.xml
+++ b/OsmAnd/res/values-de/phrases.xml
@@ -607,7 +607,7 @@
 	<string name="poi_attraction_swing_carousel">Schaukel-Karussell</string>
 	<string name="poi_attraction_train">Eisenbahn (Attraktion)</string>
 	<string name="poi_attraction_water_slide">Wasserrutsche</string>
-	<string name="poi_tower">Sendeturm</string>
+	<string name="poi_tower">Turm</string>
 	<string name="poi_mast">Mast</string>
 	<string name="poi_radar">Radar</string>
 	<string name="poi_aquarium">Aquarium</string>
