--- a/OsmAnd/res/layout/transport_route_card.xml
+++ b/OsmAnd/res/layout/transport_route_card.xml
@@ -5,12 +5,13 @@
 	android:id="@+id/route_info_details_card"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:orientation="vertical">
+	android:orientation="vertical"
+	android:paddingBottom="10dp">
 
 	<View
 		android:id="@+id/top_divider"
 		android:layout_width="match_parent"
-		android:layout_height="2dp"
+		android:layout_height="1dp"
 		android:focusable="false" />
 
 	<LinearLayout
@@ -41,17 +42,21 @@
 				android:orientation="vertical"
 				android:paddingBottom="14dp">
 
-				<android.support.v7.widget.AppCompatTextView
+				<net.osmand.plus.widgets.TextViewEx
 					android:id="@+id/from_line"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:paddingBottom="10dp"
+					android:paddingBottom="6dp"
+					android:textSize="@dimen/default_desc_text_size"
+					osmand:typeface="@string/font_roboto_regular"
 					tools:text="@string/route_from" />
 
 				<net.osmand.plus.widgets.TextViewEx
 					android:id="@+id/way_line"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
+					android:textSize="@dimen/default_desc_text_size"
+					osmand:typeface="@string/font_roboto_regular"
 					tools:text="@string/route_from" />
 
 			</LinearLayout>
@@ -88,6 +93,8 @@
 	<include
 		android:id="@+id/shadow"
 		layout="@layout/card_bottom_divider"
+		android:layout_width="match_parent"
+		android:layout_height="2dp"
 		android:visibility="visible" />
 
 </LinearLayout>
