Improve route cards ui

--- a/OsmAnd/res/layout/plan_route_info.xml
+++ b/OsmAnd/res/layout/plan_route_info.xml
@@ -504,6 +504,7 @@
 					android:id="@+id/route_menu_cards_container"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
+					android:paddingBottom="60dp"
 					android:orientation="vertical"
 					tools:background="?attr/ctx_menu_info_view_bg">
 
