--- a/OsmAnd/res/layout/transport_route_card.xml
+++ b/OsmAnd/res/layout/transport_route_card.xml
@@ -63,30 +63,67 @@
 
 		</LinearLayout>
 
-		<FrameLayout
-			android:id="@+id/details_button"
+		<LinearLayout
 			android:layout_width="match_parent"
-			android:layout_height="36dp"
-			android:layout_gravity="center_vertical"
+			android:layout_height="match_parent"
 			android:layout_marginBottom="@dimen/route_info_details_padding"
+			android:baselineAligned="false"
 			android:orientation="horizontal">
 
-			<net.osmand.plus.widgets.TextViewEx
-				android:id="@+id/details_button_descr"
-				android:layout_width="match_parent"
+			<FrameLayout
+				android:id="@+id/details_button"
+				android:layout_width="0dp"
 				android:layout_height="36dp"
-				android:layout_gravity="center"
-				android:ellipsize="end"
-				android:gravity="center"
-				android:letterSpacing="@dimen/text_button_letter_spacing"
-				android:maxLines="1"
-				android:text="@string/rendering_category_details"
-				android:textSize="@dimen/text_button_text_size"
-				osmand:typeface="@string/font_roboto_medium"
-				tools:ignore="UnusedAttribute"
-				tools:textColor="?attr/wikivoyage_active_color" />
+				android:layout_gravity="center_vertical"
+				android:layout_weight="1"
+				android:orientation="horizontal">
 
-		</FrameLayout>
+				<net.osmand.plus.widgets.TextViewEx
+					android:id="@+id/details_button_descr"
+					android:layout_width="match_parent"
+					android:layout_height="36dp"
+					android:layout_gravity="center"
+					android:ellipsize="end"
+					android:gravity="center"
+					android:letterSpacing="@dimen/text_button_letter_spacing"
+					android:maxLines="1"
+					android:text="@string/rendering_category_details"
+					android:textSize="@dimen/text_button_text_size"
+					osmand:typeface="@string/font_roboto_medium"
+					tools:ignore="UnusedAttribute"
+					tools:textColor="?attr/wikivoyage_active_color" />
+
+			</FrameLayout>
+
+			<FrameLayout
+				android:id="@+id/show_button"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center_vertical"
+				android:layout_marginLeft="@dimen/content_padding"
+				android:layout_marginRight="@dimen/content_padding"
+				android:layout_weight="1"
+				android:orientation="horizontal"
+				android:visibility="gone">
+
+				<net.osmand.plus.widgets.TextViewEx
+					android:id="@+id/show_button_descr"
+					android:layout_width="match_parent"
+					android:layout_height="36dp"
+					android:layout_gravity="center"
+					android:ellipsize="end"
+					android:gravity="center"
+					android:letterSpacing="@dimen/text_button_letter_spacing"
+					android:maxLines="1"
+					android:text="@string/shared_string_show_on_map"
+					android:textSize="@dimen/text_button_text_size"
+					osmand:typeface="@string/font_roboto_medium"
+					tools:ignore="UnusedAttribute"
+					tools:textColor="?attr/wikivoyage_active_color" />
+
+			</FrameLayout>
+
+		</LinearLayout>
 
 	</LinearLayout>
 
