--- a/OsmAnd/res/values-ru/phrases.xml
+++ b/OsmAnd/res/values-ru/phrases.xml
@@ -3859,4 +3859,6 @@
 
 	<string name="poi_shop_wholesale">Оптовый магазин</string>
 
+	<string name="poi_laboratory">Медицинская лаборатория</string>
+
 </resources>
