--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -3883,4 +3883,6 @@
 
 	<string name="poi_shop_wholesale">Wholesale store</string>
 
+	<string name="poi_laboratory">Medical laboratory</string>
+
 </resources>
