--- a/OsmAnd/res/values-ru/phrases.xml
+++ b/OsmAnd/res/values-ru/phrases.xml
@@ -3861,4 +3861,6 @@
 
 	<string name="poi_laboratory">Медицинская лаборатория</string>
 
+	<string name="poi_blood_donation">Станция переливания крови</string>
+
 </resources>
