--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -3885,4 +3885,6 @@
 
 	<string name="poi_laboratory">Medical laboratory</string>
 
+	<string name="poi_blood_donation">Blood donation</string>
+
 </resources>
