--- a/OsmAnd/res/values-ru/phrases.xml
+++ b/OsmAnd/res/values-ru/phrases.xml
@@ -3863,4 +3863,10 @@
 
 	<string name="poi_blood_donation">Станция переливания крови</string>
 
+	<string name="poi_books_type">Книги</string>
+	<string name="poi_books_comic">Комиксы</string>
+	<string name="poi_books_antiquarian">Антикварные</string>
+	<string name="poi_books_religion">Религиозные</string>
+	<string name="poi_books_academic">Академические</string>
+	<string name="poi_books_children">Детские</string>
 </resources>
