--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -3893,4 +3893,6 @@
 	<string name="poi_books_academic">Academic</string>
 	<string name="poi_books_children">Children</string>
 
+	<string name="poi_atoll">Atoll</string>
+
 </resources>
