--- a/OsmAnd/res/layout/route_waypoint_item.xml
+++ b/OsmAnd/res/layout/route_waypoint_item.xml
@@ -124,6 +124,8 @@
 			android:layout_gravity="center_vertical"
 			android:layout_marginEnd="2dp"
 			android:layout_marginRight="2dp"
+			android:layout_marginLeft="6dp"
+			android:layout_marginStart="6dp"
 			android:contentDescription="@string/shared_string_delete"
 			android:focusable="false"
 			android:scaleType="center"
