--- a/OsmAnd/res/layout/bottom_sheet_item_simple_56dp.xml
+++ b/OsmAnd/res/layout/bottom_sheet_item_simple_56dp.xml
@@ -19,7 +19,7 @@
 		android:layout_marginRight="@dimen/bottom_sheet_icon_margin"
 		tools:src="@drawable/ic_action_info_dark"/>
 
-	<TextView
+	<net.osmand.plus.widgets.TextViewEx
 		android:id="@+id/title"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
