--- a/OsmAnd/res/layout/transport_route_card.xml
+++ b/OsmAnd/res/layout/transport_route_card.xml
@@ -31,7 +31,7 @@
 		android:paddingRight="@dimen/route_info_buttons_padding_top_bottom"
 		android:paddingTop="@dimen/content_padding">
 
-		<net.osmand.plus.routepreparationmenu.FlowLayout
+		<net.osmand.plus.widgets.FlowLayout
 			android:id="@+id/routes_badges"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
