--- a/OsmAnd/res/layout/bottom_sheet_item_simple_56dp.xml
+++ b/OsmAnd/res/layout/bottom_sheet_item_simple_56dp.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
+	xmlns:osmand="http://schemas.android.com/apk/res-auto"
 	android:background="?attr/selectableItemBackground"
 	android:gravity="center_vertical"
 	android:minHeight="@dimen/bottom_sheet_selected_item_title_height"
@@ -28,6 +28,7 @@
 		android:ellipsize="end"
 		android:maxLines="1"
 		android:textAppearance="@style/TextAppearance.ListItemTitle"
+		osmand:typeface="@string/font_roboto_regular"
 		tools:text="Title"/>
 
 </LinearLayout>
