--- a/OsmAnd/res/layout/simple_list_menu_item.xml
+++ b/OsmAnd/res/layout/simple_list_menu_item.xml
@@ -5,6 +5,7 @@
               android:layout_height="@dimen/list_item_height">
 
     <TextView
+        android:layoutDirection="locale"
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -12,10 +13,11 @@
         android:layout_gravity="center_vertical"
         android:drawablePadding="24dp"
         android:gravity="center_vertical"
+        android:paddingStart="16dp"
         android:paddingLeft="16dp"
         android:textAppearance="@style/TextAppearance.ListItemTitle"
         android:textStyle="normal"
-        tools:drawableLeft="@drawable/ic_action_search_dark"
+        tools:drawableStart="@drawable/ic_action_search_dark"
         tools:text="@string/layer_poi"/>
 
 </LinearLayout>
