--- a/OsmAnd/res/layout/simple_list_menu_item.xml
+++ b/OsmAnd/res/layout/simple_list_menu_item.xml
@@ -5,7 +5,6 @@
               android:layout_height="@dimen/list_item_height">
 
     <TextView
-        android:layoutDirection="locale"
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,7 +13,9 @@
         android:drawablePadding="24dp"
         android:gravity="center_vertical"
         android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:paddingLeft="16dp"
+        android:paddingRight = "16dp"
         android:textAppearance="@style/TextAppearance.ListItemTitle"
         android:textStyle="normal"
         tools:drawableStart="@drawable/ic_action_search_dark"
