--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -3895,4 +3895,8 @@
 
 	<string name="poi_atoll">Atoll</string>
 
+	<string name="poi_toll_gantry">Toll gantry</string>
+
+	<string name="poi_childcare">Childcare</string>
+
 </resources>
