--- a/OsmAnd/res/values/colors.xml
+++ b/OsmAnd/res/values/colors.xml
@@ -237,6 +237,8 @@
 	<color name="nav_track_fluorescent">#CC00ddff</color>
 	<color name="transport_route_line">#CC2f7af5</color>
 
+	<color name="nav_track_walk_fill">#ff407ef5</color>
+	<color name="nav_track_walk_stroke">#ff1f478c</color>
 
 	<color name="nav_arrow_distant">#C0C0C0</color>
 	<color name="nav_arrow">#FADE23</color>
