--- a/OsmAnd-telegram/res/layout/fragment_timeline_tab.xml
+++ b/OsmAnd-telegram/res/layout/fragment_timeline_tab.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="vertical">
@@ -12,46 +11,26 @@
 		android:layout_height="wrap_content"
 		android:background="?attr/card_bg_color">
 
-		<LinearLayout
-			android:id="@+id/title_row"
+		<net.osmand.telegram.ui.views.TextViewEx
 			android:layout_width="match_parent"
-			android:layout_height="@dimen/action_bar_height"
-			android:gravity="center_vertical">
-
-			<net.osmand.telegram.ui.views.TextViewEx
-				android:layout_width="0dp"
-				android:layout_height="@dimen/action_bar_height"
-				android:layout_weight="1"
-				android:ellipsize="end"
-				android:gravity="center_vertical"
-				android:letterSpacing="@dimen/title_letter_spacing"
-				android:maxLines="1"
-				android:paddingLeft="@dimen/content_padding_standard"
-				android:paddingRight="@dimen/content_padding_standard"
-				android:text="@string/timeline"
-				android:textColor="@color/app_bar_title_light"
-				android:textSize="@dimen/title_text_size"
-				app:typeface="@string/font_roboto_mono_bold" />
-
-			<ImageView
-				android:id="@+id/options"
-				android:layout_width="wrap_content"
-				android:layout_height="match_parent"
-				android:layout_marginLeft="@dimen/content_padding_standard"
-				android:layout_marginRight="@dimen/content_padding_standard"
-				android:background="?attr/selectableItemBackgroundBorderless"
-				android:paddingLeft="@dimen/content_padding_half"
-				android:paddingRight="@dimen/content_padding_half"
-				tools:src="@drawable/ic_action_other_menu"
-				tools:tint="@color/icon_light"
-				tools:visibility="visible" />
-
-		</LinearLayout>
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+			android:ellipsize="end"
+			android:gravity="center_vertical"
+			android:letterSpacing="@dimen/title_letter_spacing"
+			android:maxLines="1"
+			android:paddingLeft="@dimen/content_padding_standard"
+			android:paddingRight="@dimen/content_padding_standard"
+			android:text="@string/timeline"
+			android:textColor="@color/app_bar_title_light"
+			android:paddingTop="@dimen/content_padding_standard"
+			android:paddingBottom="12dp"
+			android:textSize="@dimen/title_text_size"
+			app:typeface="@string/font_roboto_mono_bold" />
 
 		<TextView
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_marginBottom="@dimen/action_bar_descr_bottom_margin"
 			android:paddingLeft="@dimen/content_padding_standard"
 			android:paddingRight="@dimen/content_padding_standard"
 			android:text="@string/timeline_description"
@@ -99,7 +78,7 @@
 		<FrameLayout
 			android:id="@+id/date_row"
 			android:layout_width="match_parent"
-			android:layout_height="@dimen/list_header_height"
+			android:layout_height="@dimen/timeline_time_buttons_height"
 			android:background="@color/screen_bg_light"
 			android:orientation="horizontal"
 			android:paddingLeft="@dimen/content_padding_standard"
